# badges

./: .editorconfig  .flake8  .gitignore  .pre-commit-config.yaml  LICENCE  Makefile  README.md  pyproject.toml  requirements.txt
src/badges/: __init__.py  __main__.py  _html_colors.py  api.py  errors.py  utils.py
tests/: test_class_Badge.py
tests/api/: test_create_badge.py
tests/utils/: test_check_html_color.py  test_check_simpleicon.py
